# renode-embassy-test

./: README.md  flake.nix  renode.nix
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
renode/: nrf52840-dongle.repl  nrf52840.resc  test-button.robot  test-led.robot
