[package]
name = "frenode"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0", features = ["unstable-traits"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0", features = ["stm32f429zi", "unstable-pac", "memory-x", "time-driver-tim2", "exti"]  }

cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.6"
arrayvec = { version = "0.7.2", default-features = false }
