[package]
edition = "2021"
name = "frenode"
version = "0.1.0"

[features]
default = ["nightly"]
nightly = ["embassy-nrf/nightly"]

[dependencies]
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote"] }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

arrayvec = { version = "0.7.2", default-features = false }
